--- a/src/templates/welcome.hbs
+++ b/src/templates/welcome.hbs
@@ -25,15 +25,21 @@
           width: 50px;
         }
 
-        button {
+         .button {
+          display: inline-block;
           background-color: rgb(87, 91, 199);
           border: 1px solid rgb(87, 91, 199);
           color: white;
-          padding: 10px;
+          padding: 10px 20px;
           border-radius: 5px;
           font-weight: bold;
+          text-decoration: none;
           margin-bottom: 15px;
           margin-top: 5px;
+        }
+
+        .button:hover {
+          background-color: rgb(92, 97, 186);
         }
 
         span{
@@ -56,17 +62,16 @@
 <body class="body">
     <div class="card">
 
-        <h2>Welcome to our app !</h2>
+        <h2>🚀 Welcome to our app !</h2>
         
         <p>
-            Thank you for joining us !
-            We are grateful to have you on board.
+           We did successfully build an email sending service using NestJS and Bull 😎, 
+           which is fully containerized.
+           🎉 Thank you for joining us! 🙌 We are grateful to have you on board. 🙏
         </p>
 
-        <a>
-          <button style="cursor: pointer;">Open Workspace</button>
-        </a>
-
+          <a href="#" class="button" "cursor: pointer;">Open Workspace</a>
+      
         <hr>
 
         <span>MoneyMaster</span>
